// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Domain Components/LayoutView Default 1`] = `
<main>
  <div>
    Hello World!
  </div>
</main>
`;

exports[`Storyshots Domain Components/LoadingView Default 1`] = `
<div>
  <div>
    Loading...
  </div>
</div>
`;

exports[`Storyshots Domain Components/LoadingView Not Loading 1`] = `<div />`;
